--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
     "bootstrap": "~3.3.4",
     "angular": "~1.3.15",
     "angular-route": "~1.3.15",
-    "angular-animate": "~1.3.15"
+    "angular-animate": "~1.3.15",
+    "animate.css": "~3.2.6"
   }
 }
